# HEAT

./: .gitignore  .scrconf  CMakeLists.txt  Makefile  README.md  cluster_config.example.yaml  execute.sh  flags.conf  jacobi.h  jacobi_noft.c  jacobi_scr.c  jacobi_ulfm.c  main.c  main_scr.c  utils.c
src/: jacobi_noft.c  main.c
